QmidiCtl - A MIDI Remote Controller via UDP/IP Multicast
--------------------------------------------------------

ChangeLog


GIT HEAD

- Old deprecated Qt4 build support is no more.

- AppData/AppStream metadata is now settled under an all
  permisssive license (FSFAP); also updated to be the most
  compliant with latest freedesktop.org specification and
  recommendation.


0.5.2  2018-06-30  An Early Summer'18 release.

- Fixed all mixer strips for a larger width on main layout.

- Fixed for some g++ >= 8.1.1 warnings and quietness.

- Yes, Android GA is now official.


0.5.1  2018-01-11  An Early Winter'18 release.

- A little hardening on the configure (autoconf) macro side.

- A rather naive attempt to port to the Android-Qt platform;
  also introducing an (Android) Action Bar menu look-a-like.


0.5.0  2017-12-16  End of Autum'17 release.

- Desktop entry specification file is now finally independent
  from build/configure template chains.

- Updated target path for freedesktop.org's AppStream metainfo
  file (formerly AppData).


0.4.3  2017-04-27  Pre-LAC2017 release frenzy.

- Added French man page (by Olivier Humbert, thanks).

- Make builds reproducible byte for byte, by getting rid of
  the configure build date and time stamps.


0.4.2  2016-11-14  A Fall'16 release.

- Almost complete overhaul on the configure script command
  line options, wrt. installation directories specification,
  eg. --prefix, --bindir, --libdir, --datadir and --mandir.


0.4.1  2016-09-14  End of Summer'16 release.

- Dropped the --enable-qt5 from configure as found redundant
  given that's the build default anyway (suggestion by Guido
  Scholz, while for Qtractor, thanks).


0.4.0  2016-04-05  Spring'16 release frenzy.

- Added application keywords to freedesktop.org's AppData.


0.3.0  2015-09-21  Summer'15 release frenzy.

- Prefer Qt5 over Qt4 by default with configure script.

- Complete rewrite of Qt4 vs. Qt5 configure builds.
